# elib-frontend

./: .gitignore  CMakeLists.txt  Diploma.qmlproject  Diploma.qrc  main.cpp
Diploma/: Constants.qml
DiplomaContent/: App.qml
DiplomaContent/Api/: AdminService.qml  AuthService.qml  BookService.qml  CatalogService.qml  HealthService.qml  LibraryService.qml  UserService.qml  qmldir
DiplomaContent/Components/: AdminSideBar.qml  AuthorChipsSelector.qml  ConfirmDialog.qml  FilterPanel.qml  GenreChipsInput.qml  PublisherChipSelector.qml  SingleChipSelector.qml  qmldir
DiplomaContent/Database/: LocalBookDatabase.cpp  LocalBookDatabase.h  qmldir
DiplomaContent/Models/: qmldir
DiplomaContent/Navigation/: NavigationModule.qml  qmldir
DiplomaContent/Network/: AppSettings.cpp  AppSettings.h  FileUploader.cpp  FileUploader.h  GraphQLClient.cpp  GraphQLClient.h  TokenManager.cpp  TokenManager.h
DiplomaContent/Pages/: BasePage.qml  LoginPage.ui.qml  MainPage.ui.qml  RecoverPassPage.ui.qml  WelcomePage.ui.qml  qmldir
DiplomaContent/Pages/Admin/: AdminPanelPage.qml  ManageBooksView.qml  ManageEmployeesView.qml  ManageReferenceView.qml  ManageUsersView.qml  SystemLogsView.qml  UploadBooksView.qml
DiplomaContent/Pages/User/: CatalogPage.ui.qml  EpubViewer.qml  MyLibraryPage.ui.qml  PdfViewer.qml  ProfilePage.ui.qml  ReaderPage.ui.qml  epub_reader.html
DiplomaContent/Presenters/: CatalogPresenter.qml  LoginPresenter.qml  MainPresenter.qml  ManageBooksPresenter.qml  ManageEmployeesPresenter.qml  ManageReferencePresenter.qml  ManageUsersPresenter.qml  MyLibraryPresenter.qml  ProfilePresenter.qml  ReaderPresenter.qml  RecoverPassPresenter.qml  SystemLogsPresenter.qml  UploadBooksPresenter.qml  WelcomePresenter.qml  qmldir
DiplomaContent/Services/: NotificationManager.qml  qmldir
DiplomaContent/UI_Effects/: GlowEffect.qml  qmldir
DiplomaContent/UI_Elements/: BookCard.qml  HeadingText.qml  MainButton.qml  MainCheckbox.qml  MainComboBox.qml  MainSwitch.qml  MainTextField.qml  NotificationToast.qml  PageLoader.qml  qmldir
